--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
   "name": "portfolio",
-  "version": "1.0.0",
-  "description": "Jessica Hayes Design Portfolio and Knowledge Database",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JesikaRenea/jesikarenea.github.io.git"
-  },
-  "author": "Jessica Hayes",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JesikaRenea/jesikarenea.github.io/issues"
-  },
-  "homepage": "https://github.com/JesikaRenea/jesikarenea.github.io#readme",
+  "homepage": "https://jesikarenea.github.io/",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.9.11"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "gh-pages": "^3.0.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-materialize": "^3.9.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
